--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "node-media-server": "^2.1.9",
     "nodemon": "^2.0.4",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "socket.io": "^2.3.0"
   }
 }
